// Code generated by tools/genCURD. DO NOT EDIT.

syntax = "proto3";
package api;
import "google/api/annotations.proto";
import "common.proto";
option go_package = "gogogo/api;api";

// --------------------------------------------------
service userCURD {
    // tbl : user
    rpc AddUser (AddUserRequest) returns (AddUserResponse) {
        option (google.api.http) = {
            post: "/user"
            body: "*"
        };
    }
    rpc GetUserList (GetUserListRequest) returns (GetUserListResponse) {
        option (google.api.http) = {
            get: "/user"
        };
    }
    rpc DelUserByIDList (DelUserByIDListRequest) returns (Empty) {
        option (google.api.http) = {
            delete: "/user"
        };
    }
    // tbl : user_dept
    rpc AddUserDept (AddUserDeptRequest) returns (AddUserDeptResponse) {
        option (google.api.http) = {
            post: "/user-dept"
            body: "*"
        };
    }
    rpc GetUserDeptList (GetUserDeptListRequest) returns (GetUserDeptListResponse) {
        option (google.api.http) = {
            get: "/user-dept"
        };
    }
    rpc DelUserDeptByIDList (DelUserDeptByIDListRequest) returns (Empty) {
        option (google.api.http) = {
            delete: "/user-dept"
        };
    }
    // tbl : user_dept_assoc
    rpc AddUserDeptAssoc (AddUserDeptAssocRequest) returns (AddUserDeptAssocResponse) {
        option (google.api.http) = {
            post: "/user-dept-assoc"
            body: "*"
        };
    }
    rpc GetUserDeptAssocList (GetUserDeptAssocListRequest) returns (GetUserDeptAssocListResponse) {
        option (google.api.http) = {
            get: "/user-dept-assoc"
        };
    }
    // tbl : user_job
    rpc AddUserJob (AddUserJobRequest) returns (AddUserJobResponse) {
        option (google.api.http) = {
            post: "/user-job"
            body: "*"
        };
    }
    rpc GetUserJobList (GetUserJobListRequest) returns (GetUserJobListResponse) {
        option (google.api.http) = {
            get: "/user-job"
        };
    }
    rpc DelUserJobByIDList (DelUserJobByIDListRequest) returns (Empty) {
        option (google.api.http) = {
            delete: "/user-job"
        };
    }
}

// tbl : user
message UserInfo {
    int32 iD = 1;
    string userName = 2;
}

message AddUserRequest {
    UserInfo user = 1;
}

message AddUserResponse {
    UserInfo user = 1;
}

message GetUserListRequest {
    repeated int32 iDList = 1;
}
message GetUserListResponse {
    repeated UserInfo userList = 1;
}

message DelUserByIDListRequest {
    repeated int32 iDList = 1;
}
// tbl : user_dept
message UserDeptInfo {
    int32 iD = 1;
    string deptPath = 2;
    string deptName = 3;
}

message AddUserDeptRequest {
    UserDeptInfo userDept = 1;
}

message AddUserDeptResponse {
    UserDeptInfo userDept = 1;
}

message GetUserDeptListRequest {
    repeated int32 iDList = 1;
}
message GetUserDeptListResponse {
    repeated UserDeptInfo userDeptList = 1;
}

message DelUserDeptByIDListRequest {
    repeated int32 iDList = 1;
}
// tbl : user_dept_assoc
message UserDeptAssocInfo {
    int32 userID = 1;
    int32 deptID = 2;
    int32 jobID = 3;
}

message AddUserDeptAssocRequest {
    UserDeptAssocInfo userDeptAssoc = 1;
}

message AddUserDeptAssocResponse {
    UserDeptAssocInfo userDeptAssoc = 1;
}

message GetUserDeptAssocListRequest {
}
message GetUserDeptAssocListResponse {
    repeated UserDeptAssocInfo userDeptAssocList = 1;
}

// tbl : user_job
message UserJobInfo {
    int32 iD = 1;
    string jobName = 2;
}

message AddUserJobRequest {
    UserJobInfo userJob = 1;
}

message AddUserJobResponse {
    UserJobInfo userJob = 1;
}

message GetUserJobListRequest {
    repeated int32 iDList = 1;
}
message GetUserJobListResponse {
    repeated UserJobInfo userJobList = 1;
}

message DelUserJobByIDListRequest {
    repeated int32 iDList = 1;
}
